# BreakOut

./: CMakeLists.txt  README.md  \  fragment_shader.glsl  vertex_shader.glsl
lib/glad/: glad.h
lib/glm/detail/: type_vec3.hpp
src/: glad.c  main.c
src/gfx/: EBO.c  VAO.c  VAO.h  VBO.c  VBO.h  camera.c  camera.h  game.c  game.h  physics.c  physics.h  renderer.c  renderer.h  scene.c  scene.h  shader.c  shader.h  texture.c  texture.h  window.c  window.h
